# auto-helper-rs

./: Cargo.toml  README.md
src/: adb_commands.rs  cv.rs  inputer.rs  lib.rs  screenshoter.rs  structs.rs  tests.rs  xcap_screenshot.rs
