[package]
name = "auto-helper-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
enigo = { version = "0.3.0", features = ["wayland"] }
log = "0.4.22"
opencv = "0.93.4"
serde = { version = "1.0.216", features = ["derive"] }
thiserror = "2.0.3"
xcap = "0.0.14"

[dev-dependencies]
env_logger = "0.11.5"
