[package]
name = "auto-helper-rs"
version = "1.0.0"
edition = "2021"

[dependencies]
enigo = { version = "0.3.0", features = ["wayland"] }
image = "0.25.5"
imageproc = { version = "0.25.0", features = ["rayon"] }
log = "0.4.26"
serde = { version = "1.0.218", features = ["derive"] }
thiserror = "2.0.11"
xcap = "0.3.3"

[dev-dependencies]
env_logger = "0.11.6"
